--- a/TODO
+++ b/TODO
@@ -1,4 +1,4 @@
-acabar implementação dos comandos
+acabar implementação dos comandos   JUAAAAAN CARAi
 melhorar autenticação (login//cadastro)
 envio de arquivos
 download de arquivos
